# SmartAntennas

./: README.md  bewerbung.py  boing.csv  dspTest.jl  globwarm.mat  tesla.csv
c/: CMakeLists.txt  main.c
c/include/: core.h
c/src/: core.c
julia/: bsca.jl  doa.jl  doa2.jl  hello.jl
